# palletization

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: default.yaml  default_config.yaml
data/: cajas_entrada.csv  cajas_entrada_prueba.csv
docs/: documentacion_proyecto.md
palletization_dhl/Scripts/: activate  activate.bat
src/: app.py
src/config/: config.py
src/core/: algorithms.py  box.py  pallet.py
src/simulation/: conveyor.py
src/visualization/: plotter.py
tests/: test_algorithms.py  test_app.py  test_box.py  test_config.py  test_conveyor.py  test_pallet.py  test_pallet_support.py  test_visualization.py
